--- a/generic.html
+++ b/generic.html
@@ -51,13 +51,13 @@
 								<p>I am a Data Engineer and a Data Science enthusiast commited to provide the Data Analytics Services. My Commendable Skills are in R, Python, SQL, Excel, Tableau, Statistics, mathematics, finance, Data Analytics and Data Engineering tools. My passion for Data Analytics has given me a boost with almost 2 years of experience in Data Science related field and passionately work on 15+ projects where I used various Softwares and enhance my analytics skills.</p>
 								<p>I am looking for a perfect Full time opportunity to use my technical knowledge in real world data which will directly affect the company's performance positively, which will be very motivating for me to work on and achieve my professional goals.</p>
 								<center>
-									<img src="C:/Users/vidsw/Desktop/Dump3/Portfolio Final/images/az900.png" style="display:inline-block;width:200px;height:200px;" />
-									<img src="C:/Users/vidsw/Desktop/Dump3/Portfolio Final/images/data900.png" style="display:inline-block;width:200px;height:200px;" />
-									<img src="C:/Users/vidsw/Desktop/Dump3/Portfolio Final/images/dp 203.png" style="display:inline-block;width:200px;height:200px;" />
+									<img src="images/az900.png" style="display:inline-block;width:200px;height:200px;" />
+									<img src="images/data900.png" style="display:inline-block;width:200px;height:200px;" />
+									<img src="images/dp 203.png" style="display:inline-block;width:200px;height:200px;" />
 								</center>
 								<center>
-									<img src="C:/Users/vidsw/Desktop/Dump3/Portfolio Final/images/ranger.jpg" style="display:inline-block;width:200px;height:200px;" />
-									<img src="C:/Users/vidsw/Desktop/Dump3/Portfolio Final/images/gdap.png" style="display:inline-block;width:200px;height:200px;" />
+									<img src="images/ranger.jpg" style="display:inline-block;width:200px;height:200px;" />
+									<img src="images/gdap.png" style="display:inline-block;width:200px;height:200px;" />
 								</center>
 							</section>
 							
