--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 							<li><a href="elements.html">PROFESSIONAL EXPERIENCE</a></li>
 						</ul>
 						<ul class="icons">
-							<li><a href="images/Resume.pdf" download="Resume" target="_blank" class="fas fa-file-pdf" style="font-size:24px"></a></li>
+							<li><a href="images/TheResume.pdf" download="Resume" target="_blank" class="fas fa-file-pdf" style="font-size:24px"></a></li>
 							<li><a href="https://twitter.com/vidwans_swanand" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 							<li><a href="https://www.linkedin.com/in/swanand-vidwans/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>							
 							<li><a href="https://github.com/swanandvidwans" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
