--- a/elements.html
+++ b/elements.html
@@ -47,17 +47,17 @@
 									<h2 style="text-align: center;"><u>Professional Work Experience</u></h2>
 									<header>
 										<h3>Analytics - Data Services | TATA Consultancy Services | Jersey City, New Jersey | February 2022 - Present* </h3>
-										<p>Designed, developed, and launched extremely efficient and reliable data pipelines to move data and to provide intuitive analytics to our partner teams.
+										<p>Design, develop, and launch extremely efficient and reliable data pipelines to move data and to provide intuitive analytics to our partner teams.
 											Developed within existing designs of various solutions in Microsoft Azure environment to help the business get valuable insights
-											Collaborated with other engineers and Data Scientists to discover the best solutions
-											Diagnosed and solved issues in our existing data pipelines and envision and build their successors.</p>
+											Collaborate with other engineers and Data Scientists to discover the best solutions
+											Diagnose and solve issues in our existing data pipelines and envision and build their successors.</p>
 									</header>
 									
 									<header>
 										<h3>Graduate Research Assistant | Pace University | New York, NY | September 2021 - December 2021</h3>
 										<p>Assisted professor with administrative tasks , organizing events, and conducted various research tasks.
 											Gathered research data about ‘how SDLC practices can be implemented in ETL for Data & AI’.
-											Analyzes findings, prepared reports for presenting the objectives derived from google analytics and formulated Tableau 
+											Analyzed findings, prepared reports for presenting the objectives derived from google analytics and formulated Tableau 
 											dashboards for user engagement. </p>
 									</header>
 									
