--- a/elements.html
+++ b/elements.html
@@ -48,8 +48,8 @@
 									<header>
 										<h3>Analytics - Data Services | TATA Consultancy Services | Jersey City, New Jersey | February 2022 - Present* </h3>
 										<p>Design, develop, and launch extremely efficient and reliable data pipelines to move data and to provide intuitive analytics to our partner teams.
-											Developed within existing designs of various solutions in Microsoft Azure environment to help the business get valuable insights
-											Collaborate with other engineers and Data Scientists to discover the best solutions
+											Develope within existing designs of various solutions in Microsoft Azure environment to help the business get valuable insights.
+											Collaborate with other engineers and Data Scientists to discover the best solutions.
 											Diagnose and solve issues in our existing data pipelines and envision and build their successors.</p>
 									</header>
 									
